# mattermost-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: config.toml  index.md  quickstart.md
docs/01-guide/: 01-commands.md  02-json-output.md  03-authentication.md  04-tips.md
mmchat/: __init__.py  cli.py  client.py  config.py  formatters.py  helpers.py  resolve.py  time_utils.py
mmchat/commands/: __init__.py  auth.py  channels.py  messages.py  overview.py  people.py  search.py
skills/mattermost/: SKILL.md
skills/mattermost/references/: commands.md  scenarios.md  setup.md  workflows.md
tests/: test_client.py  test_config.py  test_time_utils.py
