[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmchat"
version = "0.1.0"
description = "Read-only Mattermost CLI for humans and LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Rohan Verma", email = "hello@rohanverma.net" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mattermostdriver>=7.3",
    "click>=8.0",
    "httpx>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
mm = "mmchat.cli:main"

[project.urls]
Homepage = "https://github.com/rhnvrm/mmchat"
Repository = "https://github.com/rhnvrm/mmchat"
Issues = "https://github.com/rhnvrm/mmchat/issues"
